[gd_scene load_steps=10 format=3 uid="uid://s4mwdo7urkt8"]

[ext_resource type="Script" path="res://scenes/packages/scripts/package.gd" id="2"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_icy1u"]
bg_color = Color(1, 1, 1, 0.0941176)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_4133c"]
bg_color = Color(0.282353, 0.282353, 0.282353, 1)
shadow_size = 5

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_nx6x2"]
bg_color = Color(0.866667, 0.584314, 0, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_b5ud3"]
bg_color = Color(0.909804, 0.615686, 0, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_pu7e7"]
bg_color = Color(0.831373, 0.560784, 0, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_6h3v3"]
bg_color = Color(0.513726, 0.513726, 0.513726, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_boju7"]
draw_center = false

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_7a1j1"]
bg_color = Color(0, 0, 0, 1)
border_width_top = 1
border_width_bottom = 1
border_color = Color(1, 0, 0, 1)

[node name="package" type="Panel"]
custom_minimum_size = Vector2(300, 400)
offset_right = 100.0
offset_bottom = 200.0
theme_override_styles/panel = SubResource("StyleBoxFlat_icy1u")
script = ExtResource("2")

[node name="main" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_bottom = -14.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3

[node name="name" type="Label" parent="main"]
layout_mode = 2
text = "Pack name"
horizontal_alignment = 1
vertical_alignment = 1

[node name="packs" type="Control" parent="main"]
custom_minimum_size = Vector2(0, 230)
layout_mode = 2
size_flags_vertical = 3

[node name="cover1" type="Panel" parent="main/packs"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 65.0
offset_top = 7.0
offset_right = -85.0
offset_bottom = -60.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_styles/panel = SubResource("StyleBoxFlat_4133c")

[node name="coverImg" type="TextureRect" parent="main/packs/cover1"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
expand_mode = 1

[node name="cover2" type="Panel" parent="main/packs"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 72.0
offset_top = 17.0
offset_right = -78.0
offset_bottom = -50.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_4133c")

[node name="coverImg" type="TextureRect" parent="main/packs/cover2"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
expand_mode = 1

[node name="cover3" type="Panel" parent="main/packs"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 78.0
offset_top = 27.0
offset_right = -72.0
offset_bottom = -40.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_4133c")

[node name="coverImg" type="TextureRect" parent="main/packs/cover3"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
expand_mode = 1

[node name="bar" type="HBoxContainer" parent="main"]
custom_minimum_size = Vector2(0, 35)
layout_mode = 2

[node name="price" type="Label" parent="main/bar"]
custom_minimum_size = Vector2(73, 35)
layout_mode = 2
size_flags_horizontal = 3
text = "00 Pt"
horizontal_alignment = 1
vertical_alignment = 1

[node name="MarginContainer" type="MarginContainer" parent="main/bar"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4
theme_override_constants/margin_left = 5
theme_override_constants/margin_top = 5
theme_override_constants/margin_right = 5
theme_override_constants/margin_bottom = 5

[node name="buyButton" type="Button" parent="main/bar/MarginContainer"]
custom_minimum_size = Vector2(60, 25)
layout_mode = 2
size_flags_horizontal = 3
theme_override_styles/normal = SubResource("StyleBoxFlat_nx6x2")
theme_override_styles/hover = SubResource("StyleBoxFlat_b5ud3")
theme_override_styles/pressed = SubResource("StyleBoxFlat_pu7e7")
theme_override_styles/disabled = SubResource("StyleBoxFlat_6h3v3")
theme_override_styles/focus = SubResource("StyleBoxFlat_boju7")
text = "Buy"

[node name="soldLayer" type="Panel" parent="."]
visible = false
clip_contents = true
layout_mode = 0
anchor_right = 1.0
anchor_bottom = 1.0

[node name="Panel" type="Panel" parent="soldLayer"]
layout_mode = 1
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -25.0
offset_top = 45.0
offset_right = 25.0
offset_bottom = 95.0
grow_horizontal = 2
grow_vertical = 2
rotation = -0.338594
theme_override_styles/panel = SubResource("StyleBoxFlat_7a1j1")

[node name="Label" type="Label" parent="soldLayer/Panel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -21.0
offset_top = -13.0
offset_right = 21.0
offset_bottom = 13.0
grow_horizontal = 2
grow_vertical = 2
text = "SOLD"

[connection signal="pressed" from="main/bar/MarginContainer/buyButton" to="." method="_on_buyButton_pressed"]
